add dataframe-api-compat to optional dependencies, add to test_downstream

--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -251,65 +251,67 @@ Increased minimum versions for dependencies
 Some minimum supported versions of dependencies were updated.
 If installed, we now require:
 
-+-----------------+-----------------+----------+---------+
-| Package         | Minimum Version | Required | Changed |
-+=================+=================+==========+=========+
-| numpy           | 1.22.4          |    X     |    X    |
-+-----------------+-----------------+----------+---------+
-| mypy (dev)      | 1.4.1           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| beautifulsoup4  | 4.11.1          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| bottleneck      | 1.3.4           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| fastparquet     | 0.8.1           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| fsspec          | 2022.05.0       |          |    X    |
-+-----------------+-----------------+----------+---------+
-| hypothesis      | 6.46.1          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| gcsfs           | 2022.05.0       |          |    X    |
-+-----------------+-----------------+----------+---------+
-| jinja2          | 3.1.2           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| lxml            | 4.8.0           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| numba           | 0.55.2          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| numexpr         | 2.8.0           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| openpyxl        | 3.0.10          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| pandas-gbq      | 0.17.5          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| psycopg2        | 2.9.3           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| pyreadstat      | 1.1.5           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| pyqt5           | 5.15.6          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| pytables        | 3.7.0           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| pytest          | 7.3.2           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| python-snappy   | 0.6.1           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| pyxlsb          | 1.0.9           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| s3fs            | 2022.05.0       |          |    X    |
-+-----------------+-----------------+----------+---------+
-| scipy           | 1.8.1           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| sqlalchemy      | 1.4.36          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| tabulate        | 0.8.10          |          |    X    |
-+-----------------+-----------------+----------+---------+
-| xarray          | 2022.03.0       |          |    X    |
-+-----------------+-----------------+----------+---------+
-| xlsxwriter      | 3.0.3           |          |    X    |
-+-----------------+-----------------+----------+---------+
-| zstandard       | 0.17.0          |          |    X    |
-+-----------------+-----------------+----------+---------+
++----------------------+-----------------+----------+---------+
+| Package              | Minimum Version | Required | Changed |
++======================+=================+==========+=========+
+| numpy                | 1.22.4          |    X     |    X    |
++----------------------+-----------------+----------+---------+
+| mypy (dev)           | 1.4.1           |          |    X    |
++----------------------+-----------------+----------+---------+
+| beautifulsoup4       | 4.11.1          |          |    X    |
++----------------------+-----------------+----------+---------+
+| bottleneck           | 1.3.4           |          |    X    |
++----------------------+-----------------+----------+---------+
+| dataframe-api-compat | 0.1.6           |          |    X    |
++----------------------+-----------------+----------+---------+
+| fastparquet          | 0.8.1           |          |    X    |
++----------------------+-----------------+----------+---------+
+| fsspec               | 2022.05.0       |          |    X    |
++----------------------+-----------------+----------+---------+
+| hypothesis           | 6.46.1          |          |    X    |
++----------------------+-----------------+----------+---------+
+| gcsfs                | 2022.05.0       |          |    X    |
++----------------------+-----------------+----------+---------+
+| jinja2               | 3.1.2           |          |    X    |
++----------------------+-----------------+----------+---------+
+| lxml                 | 4.8.0           |          |    X    |
++----------------------+-----------------+----------+---------+
+| numba                | 0.55.2          |          |    X    |
++----------------------+-----------------+----------+---------+
+| numexpr              | 2.8.0           |          |    X    |
++----------------------+-----------------+----------+---------+
+| openpyxl             | 3.0.10          |          |    X    |
++----------------------+-----------------+----------+---------+
+| pandas-gbq           | 0.17.5          |          |    X    |
++----------------------+-----------------+----------+---------+
+| psycopg2             | 2.9.3           |          |    X    |
++----------------------+-----------------+----------+---------+
+| pyreadstat           | 1.1.5           |          |    X    |
++----------------------+-----------------+----------+---------+
+| pyqt5                | 5.15.6          |          |    X    |
++----------------------+-----------------+----------+---------+
+| pytables             | 3.7.0           |          |    X    |
++----------------------+-----------------+----------+---------+
+| pytest               | 7.3.2           |          |    X    |
++----------------------+-----------------+----------+---------+
+| python-snappy        | 0.6.1           |          |    X    |
++----------------------+-----------------+----------+---------+
+| pyxlsb               | 1.0.9           |          |    X    |
++----------------------+-----------------+----------+---------+
+| s3fs                 | 2022.05.0       |          |    X    |
++----------------------+-----------------+----------+---------+
+| scipy                | 1.8.1           |          |    X    |
++----------------------+-----------------+----------+---------+
+| sqlalchemy           | 1.4.36          |          |    X    |
++----------------------+-----------------+----------+---------+
+| tabulate             | 0.8.10          |          |    X    |
++----------------------+-----------------+----------+---------+
+| xarray               | 2022.03.0       |          |    X    |
++----------------------+-----------------+----------+---------+
+| xlsxwriter           | 3.0.3           |          |    X    |
++----------------------+-----------------+----------+---------+
+| zstandard            | 0.17.0          |          |    X    |
++----------------------+-----------------+----------+---------+
 
 For `optional libraries <https://pandas.pydata.org/docs/getting_started/install.html>`_ the general recommendation is to use the latest version.
 The following table lists the lowest version per library that is currently being tested throughout the development of pandas.
