--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -19,7 +19,7 @@ Enhancements
 PyArrow will become a required dependency with pandas 3.0
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-[PyArrow](https://arrow.apache.org/docs/python/index.html) will become a required
+`PyArrow <https://arrow.apache.org/docs/python/index.html>`_ will become a required
 dependency of pandas starting with pandas 3.0. This decision was made based on
 [PDEP 12](https://pandas.pydata.org/pdeps/0010-required-pyarrow-dependency.html).
 
