--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -48,9 +48,9 @@ compared to NumPy object.
 
 The option can be enabled with:
 
-```
-pd.options.future.infer_string = True
-```
+.. code-block:: python
+
+    pd.options.future.infer_string = True
 
 It is expected that this behavior will become the default with pandas 3.0.
 
