--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -32,7 +32,7 @@ but not limited to:
   ``bytes``, ``structured data`` and more.
 - Better interoperability with other libraries that depend on Apache Arrow.
 
-We are collecting feedback on this decision [here](https://github.com/pandas-dev/pandas/issues/54466).
+We are collecting feedback on this decision `here <https://github.com/pandas-dev/pandas/issues/54466>`_.
 
 .. _whatsnew_210.enhancements.infer_strings:
 
